# envy

./: .clang-format  .clangd  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEPENDENCY_VALIDATION_PLAN.md  GRAPH_REWRITE.md  LICENSE  README.md  asan.supp  build.bat  build.sh  cmake_modernization_plan.txt  sanitizer_blacklist.txt  tsan.supp
.github/workflows/: ci.yml  presubmit.yml  release.yml
artwork/: Ruckus.ai
cmake/: CodexFetchContent.cmake  Dependencies.cmake  DependencyPatches.cmake  EmbedResource.cmake  EnvyFetchContent.cmake  FindLicenses.cmake  OpenSSLConfig.cmake.in  PatchOpenSSH.cmake
cmake/modules/: FindMbedTLS.cmake
cmake/scripts/: compress_licenses.py  embed_resource.py  find_licenses.py  prefetch_aws_crt.cmake  test_embed_resource.py
cmake/templates/: aws_crt_base64_sig_patch.py.in  aws_crt_disable_prebuild_patch.py.in  aws_crt_no_apple_s2n_patch.py.in  aws_noexecstack_patch.py.in  aws_sdk_curl_patch.py.in  aws_sdk_runtime_patch.py.in  libarchive_patch.py.in  libcurl_patch.py.in  libgit2_cflags_patch.py.in  libgit2_install_patch.py.in  libgit2_nsec_patch.py.in  libgit2_select_patch.py.in  libssh2_install_patch.py.in  libssh2_patch.py.in  mbedtls_user_config.h.in  s2n_feature_probe_patch.py.in
docs/: architecture.md  bundles.md  cache.md  check-install-runtime.md  commands.md  ctx_product.md  dependencies.md  envy-init.md  future-enhancements.md  lua-ergonomics.md  lua-error-reporting.md  lua_api.md  pkg_cfg_ownership.md  products.md  recipe_resolution.md  recipe_spec_ownership.md  shell-integration.md  sol.md  spec_resolution.md  structured_logging.md  trace.md  tui-progress.md  version-license.md  weak_dependencies_implementation.md  win-libcurl-deprecation.md  work.md
examples/: envy.lua  local.apt@r0.lua  local.armgcc@r0.lua  local.aws@r0.lua  local.brew@r0.lua  local.brew_package@r0.lua  local.clang-tools@r0.lua  local.cmake@r0.lua  local.gn@r0.lua  local.jlink@r0.lua  local.ninja@r0.lua  local.protobuf@r0.lua  local.python@r0.lua  local.ragel@r0.lua  local.swig@r0.lua  local.taplo@r0.lua  local.uv@r0.lua
examples/local.embedded-tools@r0/: envy-bundle.lua
functional_tests/: __init__.py  __main__.py  test_asset.py  test_bootstrap.py  test_build.py  test_bundle_custom_fetch.py  test_bundle_dependency_order.py  test_bundle_deps.py  test_bundle_fetch.py  test_cache.py  test_cache_directive.py  test_check_install_runtime.py  test_config.py  test_ctx_access_trace.py  test_ctx_asset_product.py  test_ctx_package_product.py  test_ctx_run.py  test_ctx_run_base.py  test_ctx_run_basic.py  test_ctx_run_integration.py  test_ctx_run_options.py  test_ctx_run_scenarios.py  test_default_needed_by.py  test_dependency_validation.py  test_engine.py  test_engine_declarative_fetch.py  test_engine_dependency_resolution.py  test_engine_failure_propagation.py  test_engine_fetch_caching.py  test_engine_phases.py  test_engine_programmatic_fetch.py  test_engine_recipe_loading.py  test_engine_spec_loading.py  test_engine_two_step_fetch.py  test_engine_weak_dependencies.py  test_error_output.py  test_export_import.py  test_export_phase.py  test_extract.py  test_fetch.py  (+35 more)
src/: aws_util.cpp  aws_util.h  blake3_util.cpp  blake3_util.h  blake3_util_tests.cpp  bootstrap.cpp  bootstrap.h  bootstrap_tests.cpp  bundle.cpp  bundle.h  bundle_tests.cpp  cache.cpp  cache.h  cache_tests.cpp  cli.cpp  cli.h  cli_tests.cpp  cmd.cpp  cmd.h  cmd_cache_functional_test.cpp  cmd_cache_functional_test.h  cmd_engine_functional_test.cpp  cmd_extract.cpp  cmd_extract.h  cmd_extract_tests.cpp  cmd_fetch.cpp  cmd_fetch.h  cmd_lua.cpp  cmd_lua.h  cmd_lua_tests.cpp  cmd_playground.cpp  cmd_playground.h  cmd_tests.cpp  cmd_version.cpp  cmd_version.h  cmd_version_tests.cpp  command.h  command_tests.cpp  create_recipe_nodes.cpp  create_recipe_nodes.h  (+164 more)
src/cmds/: cmd_asset.cpp  cmd_asset.h  cmd_cache_functional_test.cpp  cmd_cache_functional_test.h  cmd_common.cpp  cmd_common.h  cmd_deploy.cpp  cmd_deploy.h  cmd_engine_functional_test.cpp  cmd_engine_functional_test.h  cmd_export.cpp  cmd_export.h  cmd_extract.cpp  cmd_extract.h  cmd_extract_tests.cpp  cmd_fetch.cpp  cmd_fetch.h  cmd_git_resolve.cpp  cmd_git_resolve.h  cmd_hash.cpp  cmd_hash.h  cmd_import.cpp  cmd_import.h  cmd_import_tests.cpp  cmd_init.cpp  cmd_init.h  cmd_init_tests.cpp  cmd_install.cpp  cmd_install.h  cmd_lua.cpp  cmd_lua.h  cmd_lua_tests.cpp  cmd_merge_depot.cpp  cmd_merge_depot.h  cmd_merge_depot_tests.cpp  cmd_package.cpp  cmd_package.h  cmd_product.cpp  cmd_product.h  cmd_run.cpp  (+11 more)
src/commands/: cmd_asset.cpp  cmd_cache_functional_test.cpp  cmd_engine_functional_test.cpp  cmd_engine_functional_test.h  cmd_extract.cpp  cmd_extract_tests.cpp  cmd_fetch.cpp  cmd_fetch.h  cmd_hash.cpp  cmd_lua.cpp  cmd_lua_tests.cpp  cmd_sync.cpp  cmd_sync.h  cmd_version.cpp  cmd_version.h  cmd_version_tests.cpp
src/engine/: create_nodes.cpp  graph_state.cpp  phase_install.cpp  phase_install.h
src/engine_phases/: create_recipe_nodes.cpp  graph_state.cpp  graph_state.h  lua_ctx_bindings.cpp  lua_ctx_bindings.h  phase_build.cpp  phase_build.h  phase_check.cpp  phase_check.h  phase_check_tests.cpp  phase_completion.cpp  phase_completion.h  phase_deploy.cpp  phase_deploy.h  phase_fetch.cpp  phase_fetch.h  phase_fetch_tests.cpp  phase_install.cpp  phase_install.h  phase_install_tests.cpp  phase_recipe_fetch.cpp  phase_recipe_fetch.h  phase_stage.cpp  phase_stage.h
src/envy-init/: envy  envy.bat  envy.lua  luarc_template.json  manifest_template.lua
src/lua_ctx/: lua_ctx_asset.cpp  lua_ctx_bindings.cpp  lua_ctx_bindings.h  lua_ctx_bindings_tests.cpp  lua_ctx_commit_fetch.cpp  lua_ctx_copy.cpp  lua_ctx_copy_tests.cpp  lua_ctx_extract.cpp  lua_ctx_extract_all.cpp  lua_ctx_fetch.cpp  lua_ctx_fetch_tests.cpp  lua_ctx_ls.cpp  lua_ctx_move.cpp  lua_ctx_move_tests.cpp  lua_ctx_package.cpp  lua_ctx_product.cpp  lua_ctx_run.cpp  lua_ctx_run_tests.cpp  lua_envy_dep_util.cpp  lua_envy_dep_util.h  (+27 more)
test_data/: ctx_run_stress.py
tests/: CMakeLists.txt  third_party_smoke.cpp
tools/: build.py  run_build_wrapper.bat  unzip
(+649 files in other folders)
